css/style.scss
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


@mixin button{

    padding: 5%;
    background-color: rgb(230, 223, 223);
    font-weight: 700;
    font-size: 25px;
    border-radius: 30px;
    box-shadow: 2px 2px 10px rgb(172, 165, 165);
}

body {

    display: flex;
    justify-content: center;
    margin-top: 20%;
}

.calculator-container {

    width: 60%;
    background-color: rgb(243, 241, 241);
    border: 1px solid rgb(224, 223, 223);
    border-radius: 30px;
    padding: 2% 2%;
    box-shadow: 5px 5px 10px rgb(184, 180, 180);
}

.display {
    
    padding: 5%;
    border: 3px solid rgb(192, 179, 179);
    border-radius: 20px;
    height: 80px;
    color: white;
    background: black;

    h2 {

        text-align: right;
    }
}

.buttons {

    .clr-dlt {

        display: grid;
        width: 100%;
        grid-template-columns: repeat(3, 1fr);
        grid-gap: 5px;
        margin: 5% 0 2% 0;
        text-align: center;

        .num {

            @include button;
        }

        .ac {

            background: rgba(255, 0, 0, 0.63);
        }

        .del {

            background: rgb(255, 166, 0);
        }
        
        .scientific-btn {

            @include button;
            background: rgba(128, 255, 0, 0.781);
        }
    }

        .scientific {

            display: grid;
            grid-template-columns: repeat(3, 1fr);
            text-align: center;
            grid-gap: 5px;
            display: grid;

            .num {

                @include button;
            }
         }

    .operators {

        display: grid;
        grid-template-columns: repeat(4, 1fr);
        grid-gap: 5px;
        margin-top: 2%;

        .num {

            @include button;
            display:grid;
            place-items: center;
            font-size: 25px;
            font-weight: 700;
        }

        .plus {

            background: rgba(0, 128, 0, 0.63);
        }

        .division {

            background: rgba(137, 43, 226, 0.911);
        } 

        .minus {

            background: rgba(255, 0, 149, 0.671);
        }

        .multiply {

            background: rgba(0, 0, 255, 0.726);
        }

        .equals {

            background: #333;
            color: white;
        }
    }
}

